fix Sonarlint issue